look at this pie

--- a/migrations.toml
+++ b/migrations.toml
@@ -4,8 +4,8 @@ drop table if exists niches;
 drop table if exists complexes;
 drop table if exists biomes;
 drop table if exists biome_grades;
-drop table if exists mutaations;
-create table mutations (id integer primary key, grade_id integer not null, points_left integer not null);
+drop table if exists mutations;
+create table mutations (id integer primary key, grade_id integer not null, name text not null, points_left integer not null);
 create table grades (id integer primary key, name text not null);
 create table niches (id integer primary key, grade_id integer not null, amount integer not null, success integer not null);
 create table biomes (id integer primary key, name text not null, type text not null);
