--- a/migrations.toml
+++ b/migrations.toml
@@ -5,10 +5,10 @@ drop table if exists complexes;
 drop table if exists biomes;
 drop table if exists biome_grades;
 drop table if exists mutations;
-create table mutations (id integer primary key, grade_id integer not null, name text not null, points_left integer not null);
-create table grades (id integer primary key, name text not null);
-create table niches (id integer primary key, grade_id integer not null, amount integer not null, success integer not null);
-create table biomes (id integer primary key, name text not null, type text not null);
-create table biome_grades (id integer primary key, biome_id integer not null, grade_id integer not null, amount integer not null, success integer not null);
-create table complexes (id integer primary key, niche_id integer not null);
+create table mutations (_id integer primary key, grade_id integer not null, name text not null, points_left integer not null);
+create table grades (_id integer primary key, name text not null);
+create table niches (_id integer primary key, grade_id integer not null, amount integer not null, success integer not null);
+create table biomes (_id integer primary key, name text not null, type text not null);
+create table biome_grades (_id integer primary key, biome_id integer not null, grade_id integer not null, amount integer not null, success integer not null);
+create table complexes (_id integer primary key, niche_id integer not null);
 """
