--- a/migrations.toml
+++ b/migrations.toml
@@ -11,4 +11,6 @@ create table niches (_id integer primary key, grade_id integer not null, amount 
 create table biomes (_id integer primary key, name text not null, type text not null);
 create table biome_grades (_id integer primary key, biome_id integer not null, grade_id integer not null, amount integer not null, success integer not null);
 create table complexes (_id integer primary key, niche_id integer not null);
+insert into biomes(name, type) values ("b", "geysers");
+insert into grades(name) values("g");
 """
