--- a/migrations.toml
+++ b/migrations.toml
@@ -7,12 +7,12 @@ drop table if exists biome_grades;
 drop table if exists mutations;
 """
 migration = """
-create table mutations (_id integer primary key, grade_id integer not null, biome_id integer not null, name text not null, points_left integer not null);
-create table grades (_id integer primary key, name text not null);
-create table niches (_id integer primary key, grade_id integer not null, amount integer not null, success integer not null);
-create table biomes (_id integer primary key, name text not null, type text not null);
-create table biome_grades (_id integer primary key, biome_id integer not null, grade_id integer not null, amount integer not null, success integer not null);
-create table complexes (_id integer primary key, niche_id integer not null);
+create table if not exists mutations (_id integer primary key, grade_id integer not null, biome_id integer not null, name text not null, points_left integer not null);
+create table if not exists grades (_id integer primary key, name text not null);
+create table if not exists niches (_id integer primary key, grade_id integer not null, amount integer not null, success integer not null);
+create table if not exists biomes (_id integer primary key, name text not null, type text not null);
+create table if not exists biome_grades (_id integer primary key, biome_id integer not null, grade_id integer not null, amount integer not null, success integer not null);
+create table if not exists complexes (_id integer primary key, niche_id integer not null);
 insert into biomes(name, type) values ("b", "geysers");
 insert into grades(name) values("g");
 """
